Fri Apr 20 01:02:21 PDT 2012
        * Remove hard-coded directory creation permissions:
          User should use "umask" before running pcapsipdump to instead.

Wed Apr 18 13:39:35 2012 UTC
        * Add option '-B' to specifu capture buffer size:
          This helps to cope with packet loss under high load
        * Add missing 'break' statement. This fixes bug of
          unexpected triggering of T.38 filter

Tue Apr 3 08:28:38 2012 UTC
        * Introduce '-l' option to skip some fraction of calls

------------------- pcapsipdump 0.2 --------------------------------------------
Mon Feb 20 07:50:55 PST 2012
        * Added option to record RTCP as well as RTP
        * Fix crash for non-RFC compliant (LF-terminated) SIP-requests
        * Add debian-specific initscript

Tue Oct 18 01:24:24 PDT 2011
        * Add regexp-based number matching. To use, compile as following:
          make DEFS=-DUSE_REGEXP

Wed Aug 31 04:05:41 PDT 2011
        * Allow parsing pcap files with DLT_LINUX_SLL (113) interface type

Thu Jan 14 15:51:17 CET 2010
        * Switch to pcap_next_ex (fixes program termination when there is no
          traffic on interface
        * Allow capture on Raw IP interfaces
        * add -n option to filter calls only to/from specific address

Tue May 15 22:03:33 MSD 2007
        * Port code to sun sparc/solaris
        * Fix startup script for suse compatibility
        * Fix typos

------------------- pcapsipdump 0.1.4 ------------------------------------------
Fri May 11 22:31:49 MSD 2007
        * Avoid file trimming - add 'packet-buffered' (-U) option,
          add SIGTERM graceful handler
        * Fix 64-bit platform pointer issues (use char* in arithmetics instead
          of uint32_t)
        * Fix sip header parsing (RFC 3261 allows no-space-after-semicolon
          syntax, however it is not show in examples and, thus, rarely used)

Thu Apr  2 11:51:33 MSD 2007
        * Include "verbosity level" command-line option
